// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EarthquakeForm > should match snapshot for add mode 1`] = `
<div>
  <div
    data-testid="card"
  >
    <div
      data-testid="card-content"
    >
      <form
        class="space-y-6"
        data-testid="form"
      >
        <div
          class="space-y-4"
        >
          <div
            data-testid="form-field"
          >
            <div
              data-testid="form-item"
            >
              <label
                for="location-(lat,-long)"
              >
                Location (lat, long)
              </label>
              <div
                data-testid="form-control"
              >
                <input
                  class="bg-background"
                  id="location"
                  name="location"
                  placeholder="e.g. 34.0522, -118.2437"
                  value=""
                />
              </div>
              <div
                data-testid="form-message"
              />
            </div>
          </div>
          <div
            data-testid="form-field"
          >
            <div
              data-testid="form-item"
            >
              <label
                for="magnitude"
              >
                Magnitude
              </label>
              <div
                data-testid="form-control"
              >
                <input
                  class="bg-background"
                  id="magnitude"
                  max="10"
                  min="0"
                  name="magnitude"
                  placeholder="e.g. 5.5"
                  step="0.1"
                  type="number"
                  value=""
                />
              </div>
              <div
                data-testid="form-message"
              />
            </div>
          </div>
          <div
            data-testid="form-field"
          >
            <div
              data-testid="form-item"
            >
              <label
                for="date-and-time"
              >
                Date and Time
              </label>
              <div
                data-testid="form-control"
              >
                <input
                  class="bg-background"
                  type="datetime-local"
                  value=""
                />
              </div>
              <div
                data-testid="form-message"
              />
            </div>
          </div>
        </div>
        <hr
          data-testid="separator"
        />
        <div
          class="flex justify-end space-x-3 pt-2"
        >
          <button
            type="button"
            variant="outline"
          >
            Cancel
          </button>
          <button
            type="submit"
          >
            Add
             Earthquake
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`EarthquakeForm > should match snapshot for edit mode 1`] = `
<div>
  <div
    data-testid="card"
  >
    <div
      data-testid="card-content"
    >
      <form
        class="space-y-6"
        data-testid="form"
      >
        <div
          class="space-y-4"
        >
          <div
            data-testid="form-field"
          >
            <div
              data-testid="form-item"
            >
              <label
                for="location-(lat,-long)"
              >
                Location (lat, long)
              </label>
              <div
                data-testid="form-control"
              >
                <input
                  class="bg-background"
                  id="location"
                  name="location"
                  placeholder="e.g. 34.0522, -118.2437"
                  value=""
                />
              </div>
              <div
                data-testid="form-message"
              />
            </div>
          </div>
          <div
            data-testid="form-field"
          >
            <div
              data-testid="form-item"
            >
              <label
                for="magnitude"
              >
                Magnitude
              </label>
              <div
                data-testid="form-control"
              >
                <input
                  class="bg-background"
                  id="magnitude"
                  max="10"
                  min="0"
                  name="magnitude"
                  placeholder="e.g. 5.5"
                  step="0.1"
                  type="number"
                  value=""
                />
              </div>
              <div
                data-testid="form-message"
              />
            </div>
          </div>
          <div
            data-testid="form-field"
          >
            <div
              data-testid="form-item"
            >
              <label
                for="date-and-time"
              >
                Date and Time
              </label>
              <div
                data-testid="form-control"
              >
                <input
                  class="bg-background"
                  type="datetime-local"
                  value=""
                />
              </div>
              <div
                data-testid="form-message"
              />
            </div>
          </div>
        </div>
        <hr
          data-testid="separator"
        />
        <div
          class="flex justify-end space-x-3 pt-2"
        >
          <button
            type="button"
            variant="outline"
          >
            Cancel
          </button>
          <button
            type="submit"
          >
            Update
             Earthquake
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
